--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@ name: TPAFriends
 description: Tpa system with friends api support!
 author: BalAnce
 version: 0.1
-main: tpafriends\main
+main: tpafriends\Main
 api: 1.12.0
 commands:
  tpa:
